Added Databricks Service Principle UUID

--- a/custom-app-obo-sp-okta-service/config.env.example
+++ b/custom-app-obo-sp-okta-service/config.env.example
@@ -18,3 +18,6 @@ DATABRICKS_SERVER_HOSTNAME=your-workspace.cloud.databricks.com
 DATABRICKS_HTTP_PATH=/sql/1.0/warehouses/your-warehouse-id
 
 # Note: DATABRICKS_HTTP_PATH is optional - users can specify warehouse ID in the UI
+
+# Service Principal UUID for Databricks token exchange
+SP_UUID=abcd1234-abc7-123g-123c-12345abc7890
