Add unified Databricks interface with SQL Analytics and AI Assistant
- Add chat interface to all three apps (SPA, Web, Service Principal)
- Implement Databricks Model Serving integration with OpenAI SDK
- Add unified landing page with interface selection (SQL vs Chat)
- Update OAuth callback redirects to new unified interface
- Fix landing page messaging from 'SQL Interface' to 'Databricks Platform'
- Add automatic token refresh functionality
- Update navigation with dropdown menus
- Add new templates: chat_interface.html, databricks_interface.html
- Update requirements.txt with openai>=1.12.0 dependency
- Update config examples with model serving endpoints

--- a/custom-app-obo-user-okta-web/config.env.example
+++ b/custom-app-obo-user-okta-web/config.env.example
@@ -18,7 +18,13 @@ OAUTH_SCOPE=openid profile email all-apis offline_access
 DATABRICKS_SERVER_HOSTNAME=your-workspace.cloud.databricks.com
 DATABRICKS_HTTP_PATH=/sql/1.0/warehouses/your-warehouse-id
 
+# Databricks Model Serving Configuration
+MODEL_SERVING_ENDPOINT=https://your-workspace.cloud.databricks.com/serving-endpoints/your-model-name/invocations
+MODEL_NAME=your-model-name
+MODEL_MAX_TOKENS=256
+
 # Note: 
 # - CLIENT_SECRET is required for Web Applications (unlike SPAs)
 # - DATABRICKS_HTTP_PATH is optional - users can specify warehouse ID in the UI
+# - MODEL_SERVING_ENDPOINT should point to your Databricks model serving endpoint
 # - Refresh tokens from Web Apps are session-independent (survive Okta web logout)
