--- a/custom-app-obo-sp-okta-service/config.env.example
+++ b/custom-app-obo-sp-okta-service/config.env.example
@@ -17,6 +17,11 @@ OAUTH_SCOPE=all-apis
 DATABRICKS_SERVER_HOSTNAME=your-workspace.cloud.databricks.com
 DATABRICKS_HTTP_PATH=/sql/1.0/warehouses/your-warehouse-id
 
+# Databricks Model Serving Configuration
+MODEL_SERVING_ENDPOINT=https://your-workspace.cloud.databricks.com/serving-endpoints/your-model-name/invocations
+MODEL_NAME=your-model-name
+MODEL_MAX_TOKENS=256
+
 # Note: DATABRICKS_HTTP_PATH is optional - users can specify warehouse ID in the UI
 
 # Service Principal UUID for Databricks token exchange
