--- a/custom-app-obo-user-okta-spa/config.env.example
+++ b/custom-app-obo-user-okta-spa/config.env.example
@@ -16,4 +16,9 @@ OAUTH_SCOPE=openid profile email all-apis offline_access
 DATABRICKS_SERVER_HOSTNAME=your-workspace.cloud.databricks.com
 DATABRICKS_HTTP_PATH=/sql/1.0/warehouses/your-warehouse-id
 
+# Databricks Model Serving Configuration
+MODEL_SERVING_ENDPOINT=https://your-workspace.cloud.databricks.com/serving-endpoints/your-model-name/invocations
+MODEL_NAME=your-model-name
+MODEL_MAX_TOKENS=256
+
 # Note: DATABRICKS_HTTP_PATH is optional - users can specify warehouse ID in the UI
