Renamed scopes in Okta AS to not confuse with Databricks scopes

--- a/custom-app-obo-sp-okta-service/config.env.example
+++ b/custom-app-obo-sp-okta-service/config.env.example
@@ -11,7 +11,7 @@ FLASK_SECRET_KEY=service-principal-oauth-app-secret
 ISSUER_URL=https://your-okta-domain.okta.com/oauth2/your-auth-server-id
 CLIENT_ID=your-service-app-client-id-here
 CLIENT_SECRET=your-service-app-client-secret-here
-OAUTH_SCOPE=all-apis
+OAUTH_SCOPE=databricks-token-federation
 
 # Databricks SQL Endpoint Configuration
 DATABRICKS_SERVER_HOSTNAME=your-workspace.cloud.databricks.com
