--- a/custom-app-obo-user-okta-spa/config.env.example
+++ b/custom-app-obo-user-okta-spa/config.env.example
@@ -10,7 +10,7 @@ FLASK_SECRET_KEY=user-auth-oauth-app-secret
 ISSUER_URL=https://your-okta-domain.okta.com/oauth2/your-auth-server-id
 CLIENT_ID=your-spa-client-id-here
 REDIRECT_URI=http://localhost:5000/callback
-OAUTH_SCOPE=openid profile email all-apis offline_access
+OAUTH_SCOPE=openid profile email offline_access
 
 # Databricks SQL Endpoint Configuration
 DATABRICKS_SERVER_HOSTNAME=your-workspace.cloud.databricks.com
