--- a/custom-app-obo-user-okta-web/config.env.example
+++ b/custom-app-obo-user-okta-web/config.env.example
@@ -12,7 +12,7 @@ ISSUER_URL=https://your-okta-domain.okta.com/oauth2/your-auth-server-id
 CLIENT_ID=0oavnuchikx8gDmcp697
 CLIENT_SECRET=cE89rbwJ2u4KPh5xPqeBRq3bD1tnIGjkHTGGwgO2Hr6n1HxoZsx_JmArfbCET-N8
 REDIRECT_URI=http://localhost:6000/callback
-OAUTH_SCOPE=openid profile email all-apis offline_access
+OAUTH_SCOPE=openid profile email offline_access
 
 # Databricks SQL Endpoint Configuration
 DATABRICKS_SERVER_HOSTNAME=your-workspace.cloud.databricks.com
